Fixed the images to not get cut off at the overhang

--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -110,7 +110,7 @@
       }
       &.version-1{
         right:1rem;
-        top: 6.5rem;
+        top: 5.5rem;
       }
       width: 46%;
       height: 46%;
